--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+{
+    "message": "<%= message %>" ,
+    "status": "<%= error.status %>"
+}
