--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <h1>How to use</h1>
-    <a href="https://github.com/WsureWarframe/warframe-info-api"></a>
+    <a href="https://github.com/WsureWarframe/warframe-info-api">Github: warframe-info-api</a>
     <footer>
       <a href="https://beian.miit.gov.cn/">湘ICP备2022000904号-1</a>
     </footer>
